WIP: oapi-codegen
